--- a/login.html
+++ b/login.html
@@ -1,40 +1,13 @@
-<!--Create a simple login form using HTML.-->
-
-<!--1. Log in to [CodePen](http://codepen.io) and create a new pen-->
-<!--1. Copy and paste the following into the CSS panel: `label {display: block;}`-->
-<!--1. Create a form that meets the following requirements:-->
-    <!-- - Form action is `https://example.com/login`-->
-    <!-- - Form method is `POST`-->
-    <!-- - Form contains a text input for the user’s username-->
-    <!-- - Form contains a password input for the user’s password-->
-    <!-- - Form contains a checkbox input for whether or not the site should remember the user’s login-->
-    <!-- - Form contains two radio inputs with the name `newsletter` and the values `yes` and `no` (with `no` selected by default) to capture whether or not the user wants to receive the site’s newsletter-->
-    <!-- - Form contains a select input for the user’s state (use the HTML from [this pen](http://codepen.io/segdeha/pen/gMpqdY?editors=1000) for the select list)-->
-    <!-- - Form contains a button with the label `Submit`-->
-
-<!--Copy and paste the following into the CSS pane in your pen to help with formatting (I’ll explain what it does exactly when we start learning CSS):-->
-
-    <!--label {-->
-        <!--display: block;-->
-    <!--}-->
-
-<!--## Extra Credit-->
-
-<!-- - Add more fields of varying types-->
-<!-- - Try grouping related fields using the `<fieldset></fieldset>` tag-->
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login to CatsCatsCats!</title>
     <style>
         body {
-            background-color: lavender;
+            background-color: ghostwhite;
             color: darkslateblue;
-            font-size: 10;
+            font-family: Arial;
         }
             label {
         display: block;
@@ -42,8 +15,110 @@
     </style>
 </head>
 <body>
-stuff stuff stuff
+<article>
+    <div>
+        <form action="https://example.com/login" method="post">
+            <fieldset>
+                <legend>Login Info</legend>
+                    <label for="formUsername">Username: </label><input type="text" name="username" id="formUsername">
+                    <br>
+                    <label for="formPassword">Password: </label><input type="password" name="password" id="formPassword">
+                    <br>
+                    <label for="formRemember"><input type="checkbox" name="remember" id="formRemember">Remember me?</label>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>Newsletter</legend>
+                Would you like to subscribe to our totally non-spammy newsletter? <span style="color: red">*</span>
+                <label for="formNewsletterYes"><input type="radio" id="formNewsletterYes" name="formNewsletter" value="Yes">Yes</label>
+                <label for="formNewsletterNo"><input type="radio" id="formNewsletterNo" name="formNewsletter" value="No" checked="checked">No</label>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>Where you at?</legend>
+                    <select>
+                        <option value="AL">Alabama</option>
+                        <option value="AK">Alaska</option>
+                        <option value="AZ">Arizona</option>
+                        <option value="AR">Arkansas</option>
+                        <option value="CA">California</option>
+                        <option value="CO">Colorado</option>
+                        <option value="CT">Connecticut</option>
+                        <option value="DE">Delaware</option>
+                        <option value="DC">District Of Columbia</option>
+                        <option value="FL">Florida</option>
+                        <option value="GA">Georgia</option>
+                        <option value="HI">Hawaii</option>
+                        <option value="ID">Idaho</option>
+                        <option value="IL">Illinois</option>
+                        <option value="IN">Indiana</option>
+                        <option value="IA">Iowa</option>
+                        <option value="KS">Kansas</option>
+                        <option value="KY">Kentucky</option>
+                        <option value="LA">Louisiana</option>
+                        <option value="ME">Maine</option>
+                        <option value="MD">Maryland</option>
+                        <option value="MA">Massachusetts</option>
+                        <option value="MI">Michigan</option>
+                        <option value="MN">Minnesota</option>
+                        <option value="MS">Mississippi</option>
+                        <option value="MO">Missouri</option>
+                        <option value="MT">Montana</option>
+                        <option value="NE">Nebraska</option>
+                        <option value="NV">Nevada</option>
+                        <option value="NH">New Hampshire</option>
+                        <option value="NJ">New Jersey</option>
+                        <option value="NM">New Mexico</option>
+                        <option value="NY">New York</option>
+                        <option value="NC">North Carolina</option>
+                        <option value="ND">North Dakota</option>
+                        <option value="OH">Ohio</option>
+                        <option value="OK">Oklahoma</option>
+                        <option value="OR">Oregon</option>
+                        <option value="PA">Pennsylvania</option>
+                        <option value="RI">Rhode Island</option>
+                        <option value="SC">South Carolina</option>
+                        <option value="SD">South Dakota</option>
+                        <option value="TN">Tennessee</option>
+                        <option value="TX">Texas</option>
+                        <option value="UT">Utah</option>
+                        <option value="VT">Vermont</option>
+                        <option value="VA">Virginia</option>
+                        <option value="WA">Washington</option>
+                        <option value="WV">West Virginia</option>
+                        <option value="WI">Wisconsin</option>
+                        <option value="WY">Wyoming</option>
+                        <option value="AS">American Samoa</option>
+                        <option value="GU">Guam</option>
+                        <option value="MP">Northern Mariana Islands</option>
+                        <option value="PR">Puerto Rico</option>
+                        <option value="UM">United States Minor Outlying Islands</option>
+                        <option value="VI">Virgin Islands</option>
+                        <option value="AA">Armed Forces Americas</option>
+                        <option value="AP">Armed Forces Pacific</option>
+                        <option value="AE">Armed Forces Others</option>
+                    </select>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>For statistical purposes</legend>
+                    Which is the obviously most best animal?
+                    <label for="formCats"><input type="checkbox" id="formCats" name="Cats" value="Cats!">Cats!</label>
+                    <label for="formCatsCats"><input type="checkbox" id="formCatsCats" name="catscats" value="CATS.">CATS.</label>
+                    <label for="formCatsCatsCats"><input type="checkbox" id="formCatsCatsCats" name="catscatscats" value="...cats?">...cats?</label>
+                    <label for="formTurtles"><input type="checkbox" id="formTurtles" name="turtles" value="I like turtles!">I like turtles!</label>
+            </fieldset>
+            <br>
+            <input type="submit" value="Submit">
+            <input type="reset" value="Start Over"
+        </form>
+    </div>
+</article>
+
+
 <br>
-stuff
+<br>
+<br>
+<span style="color:red">*</span> Newsletter guaranteed to contain not more than 2% Spam and/or span tags.
 </body>
 </html>
