--- a/portfolio.html
+++ b/portfolio.html
@@ -7,25 +7,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div id="name picture bit">
+<header>
+    <img src="http://www.hagenburger.net/BLOG/gallery-2.jpg">
+    <div>
+        <h1>Name</h1>
+        <p>skillz</p>
+    </div>
+</header>
 
-</div>
+<aside>
+    <h2>About me...</h2>
+        <p>I am interested in making the interwebz better by filling every page with as many cats as possible.</p>
+</aside>
 
-<div id="about me bit">
+<section>
+    <h2>Projects</h2>
+    <div>
+        <a href="#">
+            Project 1<br>
+            About project~
+        </a>
+        <a href="#">
+            Project 2<br>
+            About project~<br>
+        </a>
+        <a href="#">
+            Project 3<br>
+            About project~
+        </a>
+        <a href="#">
+            Project 4<br>
+            About project~
+        </a>
+    </div>
 
-</div>
+</section>
 
-<div id="projects bit">
+<aside>
+    <h2>More about me...</h2>
+        <p>things and stuff</p>
 
-</div>
+</aside>
 
-<div id="more about me bit">
+<footer>
+    <h2>Contact:</h2>
+    <ul>
+        <li>github</li>
+        <li>email</li>
+        <li>phone</li>
+    </ul>
 
-</div>
-
-<div id="contact bit">
-
-</div>
+</footer>
 
 </body>
 </html>
