changed colors on portfolio, intro to sass

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,9 @@
 <header>
     <img src="http://www.hagenburger.net/BLOG/gallery-2.jpg">
     <div>
-        <h1>Name</h1>
-        <p>skillz</p>
+        <h1>Cat</h1>
+            <p>professional loafer</p>
+
     </div>
 </header>
 
@@ -46,7 +47,6 @@
 <aside>
     <h2>More about me...</h2>
         <p>things and stuff</p>
-
 </aside>
 
 <footer>
